--- a/app/views/levels/grid.html.erb
+++ b/app/views/levels/grid.html.erb
@@ -1,3 +1,27 @@
 <p>
   You can use <a href="https://getbootstrap.com/docs/5.3/components/alerts/" target="_blank">Alerts</a> for the colored boxes within each cell.
 </p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="alert alert-success">
+        Full-width
+      </div>
+    </div>  
+  </div>
+
+  <div class="row">
+    <div class="col-md-5">
+      <div class="bg-primary">
+        5 with blank
+      </div>
+    </div> 
+
+    <div class="offset-md-2 col-md-5">
+      <div class="bg-primary">
+        5 with blank
+      </div> 
+    </div>
+  </div>
+</div>
