--- a/app/views/levels/other_buttons.html.erb
+++ b/app/views/levels/other_buttons.html.erb
@@ -1,23 +1,23 @@
 <!-- Write CSS in public/css/my_styles.css to make the following <a> tags look like buttons of various colors -->
 
 <p>
-  <a>Primary</a>
+  <a class="btn btn-primary">Primary</a>
 </p>
 
 <p>
-  <a>Secondary</a>
+  <a class="btn btn-secondary">Secondary</a>
 </p>
 
 <p>
-  <a>Success</a>
+  <a class="btn btn-success">Success</a>
 </p>
 
 <p>
-  <a>Danger</a>
+  <a class="btn btn-danger">Danger</a>
 </p>
 
 <p>
-  <a>Warning</a>
+  <a class="btn btn-warning">Warning</a>
 </p>
 
 <p>
